--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -2,32 +2,41 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# -- Chart name override
+nameOverride: ""
+# -- Chart full name override
+fullnameOverride: ""
+
+# -- Number of deployment replicas
 replicaCount: 1
 
 image:
-  repository: us.gcr.io/celo-testnet/safe-config-service
+  # -- Image repository
+  repository: us-central1-docker.pkg.dev/clabs-gnosis-safe/charts/safe-config-service
+  # -- Image pullpolicy
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
+  # -- Image tag
   tag: 7563d11ebf253aa251177eb010e14f23e03ac73e
 
+# -- Image pull secrets
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
+  # -- Specifies whether a service account should be created
   create: true
-  # Annotations to add to the service account
+  # -- Annotations to add to the service account
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template
   name: ""
 
+# -- Custom pod annotations
 podAnnotations: {}
 
+# -- Custom pod security context
 podSecurityContext: {}
   # fsGroup: 2000
 
+# -- Custom container security context
 securityContext: {}
   # capabilities:
   #   drop:
@@ -37,12 +46,12 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
+  # -- Kubernetes Service Type
   type: ClusterIP
+  # -- Kubernetes Service Type
   port: 80
 
-ingress:
-  enabled: false
-
+# -- Container resources
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -55,23 +64,22 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
+# -- Kubernetes node selector
 nodeSelector: {}
 
+# -- Kubernetes tolerations
 tolerations: []
 
+# -- Kubernetes pod affinity
 affinity: {}
 
 global:
   postgresql:
+    # -- Postgresql depencency chart database for storing data
     postgresqlDatabase: ""
+    # -- Postgresql depencency chart password
     postgresqlPassword: ""
 
 safeConfigService:
+  # -- Secret key for safe-config-service
   secretKey: ""
