--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/charts/safe-config-service:$COMMIT_SHA', '.' ]
 - name: 'us-central1-docker.pkg.dev/clabs-gnosis-safe/cloud-builders-community/helm:3.8.1'
-  args: [ 'dep', 'update', 'helm-chart']
-  env:
-  - 'SKIP_CLUSTER_CONFIG=true'
-- name: 'us-central1-docker.pkg.dev/clabs-gnosis-safe/cloud-builders-community/helm:3.8.1'
-  args: [ 'package', 'helm-chart']
+  args: [ 'package', '-u', 'helm-chart']
   env:
   - 'SKIP_CLUSTER_CONFIG=true'
 - name: 'us-central1-docker.pkg.dev/clabs-gnosis-safe/cloud-builders-community/helm:3.8.1'
