--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/charts/safe-config-service:$COMMIT_SHA', '.' ]
-- name: 'us-central1-docker.pkg.dev/clabs-gnosis-safe/cloud-builders-community/helm:3.8.1'
+  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/images/safe-config-service:$COMMIT_SHA', '.' ]
+- name: 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-builders-community/helm:3.8.1'
   args: [ 'package', '-u', 'helm-chart']
   env:
   - 'SKIP_CLUSTER_CONFIG=true'
-- name: 'us-central1-docker.pkg.dev/clabs-gnosis-safe/cloud-builders-community/helm:3.8.1'
+- name: 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-builders-community/helm:3.8.1'
   entrypoint: /bin/bash
   args: ['-c', 'helm push /workspace/safe-config-service-chart-*.tgz oci://us-central1-docker.pkg.dev/$PROJECT_ID/charts']
   env:
   - 'SKIP_CLUSTER_CONFIG=true'
 images:
-- 'us-central1-docker.pkg.dev/$PROJECT_ID/charts/safe-config-service:$COMMIT_SHA'
+- 'us-central1-docker.pkg.dev/$PROJECT_ID/images/safe-config-service:$COMMIT_SHA'
 timeout: 2000s
