--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -35,19 +35,27 @@ spec:
             - name: DEFAULT_FILE_STORAGE
               value: django.core.files.storage.FileSystemStorage
             - name: DOCKER_NGINX_VOLUME_ROOT
-              value: /nginx
+              value: "/static"
             - name: POSTGRES_HOST
               value: {{ .Release.Name }}-postgresql
             - name: POSTGRES_PASSWORD
               value: {{ .Values.global.postgresql.auth.postgresPassword }}
             - name: SECRET_KEY
-              value: {{ required "Require .Values.safeConfigService.secretKey" .Values.safeConfigService.secretKey }}
+              value: {{ required "Require .Values.env.secretKey" .Values.env.secretKey }}
             - name: GUNICORN_BIND_SOCKET
-              value: "127.0.0.1:81"
+              value: "unix:/static/gunicorn.socket"
             - name: GUNICORN_BIND_PORT
               value: "80"
             - name: DJANGO_ALLOWED_HOSTS
               value: {{ include "safe-config-service-helm.fullname" . }},{{ range .Values.ingress.hosts }}{{- .host }},{{- end }}.localhost,127.0.0.1,[::1]
+            - name: DEBUG
+              value: {{ .Values.env.debug | quote }}
+            - name: ROOT_LOG_LEVEL
+              value: {{ .Values.env.rootLogLevel | quote }}
+            - name: GUNICORN_WEB_RELOAD
+              value: {{ .Values.env.gUnicornWebReload | quote }}
+            - name: CSRF_TRUSTED_ORIGINS
+              value: {{ .Values.env.csrfTrustedOrigins | quote }}
           ports:
             - name: http
               containerPort: 80
