--- a/helm-chart/values-test.yaml
+++ b/helm-chart/values-test.yaml
@@ -1,11 +1,8 @@
-global:
-  postgresql:
-    postgresqlDatabase: database
-    postgresqlPassword: testing
 image:
   pullPolicy: IfNotPresent
   repository: us-central1-docker.pkg.dev/clabs-gnosis-safe/images/safe-config-service
   tag: 13a1e7b3fe0bfac9a49eb40037272bd84fe918cc
+
 ingress:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
@@ -19,10 +16,25 @@ ingress:
   - hosts:
     - config-service.celo-safe.io
     secretName: config-service-tls
+
 resources:
   limits:
     cpu: 700m
   requests:
     cpu: 700m
-safeConfigService:
+
+env:
   secretKey: testing
+  debug: "false"
+  rootLogLevel: "INFO"
+  gUnicornWebReload: "false"
+  csrfTrustedOrigins: "http://*,https://*"
+
+postgresql:
+  image:
+    tag: "13.8.0"
+
+global:
+  postgresql:
+    auth:
+      postgresPassword: testing
