--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -113,13 +113,20 @@ tolerations: []
 # -- Kubernetes pod affinity
 affinity: {}
 
-global:
-  postgresql:
-    # -- Postgresql dependency chart database for storing data
-    postgresqlDatabase: ""
-    # -- Postgresql dependency chart password
-    postgresqlPassword: ""
-
-safeConfigService:
+env:
+  debug: "false"
+  rootLogLevel: "INFO"
+  gUnicornWebReload: "false"
+  csrfTrustedOrigins: "http://*,https://*"
   # -- Secret key for safe-config-service
   secretKey: ""
+
+postgresql:
+  image:
+    tag: "13.8.0"
+
+global:
+  postgresql:
+    auth:
+      # -- Postgresql dependency chart password
+      postgresPassword: ""
